2011-06-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RPC.pm: new RPC method: SEARCH_NODEID

2011-06-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RPC.pm: New RPC method: AGGREGATE_DS

2011-06-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Scheduler.pm, perllib/Torrus/Collector.pm: repeat
	immediately 3 collector cycles at start

2011-06-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/RRDStorage.pm (updateRRD): suppress
	inserting NaN when no data is available for the whole RRD file

	* xmlconfig/snmp-defs.xml: default rrd-create-heartbeat changed
	from 500 to 720

2011-05-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm: "imgformat" is now a
	configurable view parameter

	* xmlconfig/defaults.xml: new view: "embedded" for external GUI
	systems

2011-05-26  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector.pm (beforeRun): Collector
	initialization is done with an exclusive lock on
	collector_lock.db. This avoids the concurrent config slurping at
	collector startup and minimizes the I/O delays.

2011-05-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/HTML.pm (makeURL): All navigation is now
	done with persistent URLs. Tokens are removed from GUI wnenever
	possible.

2011-05-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Patton.pm: new discovery module for
	Patton devices

	* perllib/Torrus/DevDiscover/NexComm.pm: new discovery module for
	NexComm xDSL gateways

	* perllib/Torrus/DevDiscover/Actelis.pm: new discovery module for
	Actelis xDSL gateways

	* perllib/Torrus/DevDiscover/Thomson_xDSL.pm: new discovery module
	for Technicolor/Thomson xDSL gateways

2011-05-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
