@@ -1,5 +1,9 @@
 2011-06-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* perllib/Torrus/Collector.pm (beforeRun): Collector
+	initialization exclusive lock is enabled by
+	$Torrus::Collector::exclusiveStartupLock in torrus-siteconfig.pl
+
 	* perllib/Torrus/Renderer/RPC.pm: new RPC method: SEARCH_NODEID
 
 2011-06-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
